# datacrash

./: .gitignore  README.md  pyproject.toml
src/datacrash/: __init__.py  plugin.py  wrapper.py
src/datacrash/plugins/: logging.py  tinydb.py
tests/: test_extensions.py  test_wrapper.py
