[project]
name = "datacrash"
version = "0.0.0000000001"
description = "lets ruin something nice"
authors = [
    { name = "graham", email = "graham.annett@gmail.com" },
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "NO"}

[project.optional-dependencies]
tinydb = ["tinydb>=4.8.0"]
all = ["datacrash[tinydb]"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.1",
]
